# Galpha-desktop

./: .env.example  .gitignore  .prettierignore  DEPLOYMENT.md  DESIGN.md  DISCORD_SETUP.md  IMPROVEMENTS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README-TESTEURS.md  README.md  READY_TO_USE.md  REFACTORING_COMPLETE.md  SETUP.md  SUMMARY.md  TODO.md  WINDOWS_SETUP.md  config.example.toml  eslint.config.js  index.html  install-rust.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release-staging.yml  release.yml
scripts/: release.sh
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: models.rs  schema.rs
src-tauri/src/discord/: mod.rs
src-tauri/src/lcu/: connector.rs  detector.rs  mod.rs
src-tauri/src/recorder/: mod.rs
src-tauri/src/riot_api/: client.rs  mod.rs  models.rs
src/components/: AccountSwitcher.tsx  ApiKeySetup.tsx  Dashboard.tsx  ErrorBoundary.tsx  LauncherDashboard.tsx  LiveGame.tsx  LiveGameNotification.tsx  LoginScreen.tsx  Logo.tsx  MainDashboard.tsx  OnboardingView.tsx  ProgressionChart.tsx  ReplayPlayer.tsx  Replays.tsx  Settings.tsx  StatsOverview.tsx  SummonerProfile.tsx  TitleBar.tsx  TopNavigation.tsx  UpdateChecker.tsx  Welcome.tsx  WindowTitleBar.tsx
src/hooks/: index.ts  useLiveGameDetection.ts  useLoLDetection.ts  useMatchHistory.ts  useRiotApi.ts
src/styles/: main.css
src/types/: index.ts  riot.ts
src/utils/: logger.ts  (+1 more)
