[package]
name = "galpha-desktop"
version = "0.0.3"
description = "League of Legends stats tracker with AI-powered insights"
authors = ["Galpha Team"]
edition = "2021"

[lib]
name = "galpha_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
sysinfo = "0.32"
tungstenite = "0.24"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
urlencoding = "2.1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
tiny_http = "0.12"
uuid = { version = "1.10", features = ["v4"] }
open = "5.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

